[package]
name = "builtin_commands"
version = "0.1.0"
authors = ["NathanMcMillan54 <nathanmcmillan54@gmail.com>"]
edition = "2018"

[workspace]
members = [
    "asku/",
    "editfile/",
    "makefile/",
    "print/",
    "shutdown/"
]

[dependencies]
asku = { path = "asku/" }
editfile = { path = "editfile/" }
makefile = { path = "makefile/" }
print = { path = "print/" }
shutdown = { path = "shutdown/" }
